<resources>
    <integer name="com_vk_sdk_AppId">7454841</integer>
    <string name="app_name">KafGoodLine</string>
    <string name="register">Зарегистрируйте его!</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="vk_auth">VK AUTH</string>
    <string name="login_text">У вас ещё нет аккаунта?</string>
    <string name="Register">РЕГИСТРАЦИЯ</string>
    <string name="logo">Logo</string>
    <string name="RegisterInfo">ИЛИ ЗАРЕГИСТРИРУЙТЕСЬ ЧЕРЕЗ</string>
    <string name="RegisterText">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="add">Add</string>
    <string name="analitic">Статистика</string>
    <string name="home">Главная</string>
    <string name="content_plan">Контент план</string>
    <string name="training">Курсы</string>
    <string name="profile">Профиль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_Title">ВАШ ПРОФИЛЬ</string>
    <string name="link_count_profile">0 соц. сети подключено</string>
    <string name="error_login_password">Логин или пароль не введён</string>
    <string name="text_DescribeApp">
        Данное приложение создано для помощи SMM - специалистам.
        Бесплатный функционал поможет вам в продвижении вашей страницы в таких социальных сетях, как ВКонтакте или Twitter.
        \n \n
        Ниже представлено краткое описание основных функций приложения для первичного ознакомления
        \n
        ...
    </string>
    <string name="secondName">SecondName</string>
    <string name="firstName">FirstName</string>
    <string name="server">http://127.0.0.1:8000</string>
</resources>
