<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/statictics"
        android:title="@string/analitic"
        android:icon="@drawable/ic_broken_image_black_24dp" />
    <item
        android:id="@+id/contentPlan"
        android:title="@string/content_plan"
        android:icon="@drawable/ic_blur_on_black_24dp" />
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:checked="true" />
    <item
        android:id="@+id/training"
        android:title="@string/training"
        android:icon="@drawable/ic_style_black_24dp" />
    <item
        android:id="@+id/progile"
        android:title="@string/profile"
        android:icon="@drawable/ic_account_box_black_24dp" />
</menu>