<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.loginScreen.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:background="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:textColor="#fff"
                android:textSize="25sp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:textColor="#fff"
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_style_white"
                    android:inputType="text"
                    android:hint="@string/username"
                    android:textColorHint="#726F6F"
                    android:padding="10dp"
                    android:importantForAutofill="no"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/pass1"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_style_white"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="#726F6F"
                    android:padding="10dp"
                    android:importantForAutofill="no"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/pass2"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_style_white"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="#726F6F"
                    android:padding="10dp"
                    android:importantForAutofill="no"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RegisterInfo"
                android:textColor="#fff"
                android:textSize="18sp"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/vk_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/butt_style_color"
                android:text="@string/RegisterText"
                android:layout_marginTop="50dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>