<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.loginScreen.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.loginScreen.MainActivity"
        android:screenOrientation="portrait"
        android:orientation="vertical"
        android:background="@drawable/login_background">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="270dp"
                android:background="#00E9E6E6"
                android:gravity="bottom|center|top|center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etLogin"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style_white"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="false"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPass"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_style_white"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="false"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/butt_style_color"
                    android:linksClickable="false"
                    android:paddingLeft="140dp"
                    android:paddingTop="12dp"
                    android:paddingRight="140dp"
                    android:paddingBottom="12dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="#282e33"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <FrameLayout
                android:id="@+id/flBtnContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/butt_style_color"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="30dp"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </FrameLayout>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/vk_logo"
                android:contentDescription="@string/vk_auth" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="15sp"
                android:textStyle="bold"
                android:onClick="showRegistration" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>